--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,19 @@ services:
     restart: always
     networks:
       - db
-  # backend:
-  #   container_name: testProject_backend
-  #   build:
-  #     context: .
-  #     dockerfile: dockerfile
-  #   env_file:
-  #     .env
-  #   depends_on: 
-  #     - database
-  #   networks:
-  #     - db
+  backend:
+    container_name: testProject_backend
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      .env
+    ports:
+      - 8080:8080
+    depends_on: 
+      - database
+    networks:
+      - db
 volumes:
   db-data:
 networks:
