--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "myapp",
 	"version": "1.0.0",
 	"description": "",
-	"main": "build/app.js",
+	"main": "dist/app.js",
 	"scripts": {
 		"prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
 		"build": "tsc",
