--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"esModuleInterop": true,
 		"target": "es6",
 		"rootDir": "./src",
-		"outDir": "./build",
+		"outDir": "./dist",
 		"strict": true,
 		"baseUrl": ".",
 		"paths": {
